added gpt operation
